--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
-    "express": "^4.15.3",
+    "chalk": "^2.1.0",
+    "express": "^4.15.4",
     "morgan": "^1.8.2",
     "nunjucks": "^3.0.1",
-    "pg": "^7.1.0",
+    "pg": "^6.4.1",
     "pg-hstore": "^2.3.2",
     "sequelize": "^4.4.2",
     "volleyball": "^1.4.1"
